cabal-version:   3.14
name:            websocket-json
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable server
    main-is:          Server.hs
    other-modules:    Game.Types
                    , Game.State
    build-depends:    base ^>=4.21.0.0
                    , websockets ^>=0.13      
                    , aeson ^>=2.2
                    , text ^>=2.1
                    , bytestring ^>=0.12
                    , containers ^>=0.7
                    , vector ^>=0.13
                    , unordered-containers ^>=0.2
                    , random ^>=1.2
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

